Fixed white spacing width issues

--- a/migration/migration.less
+++ b/migration/migration.less
@@ -19,8 +19,9 @@ div.container.page-wrap {
 
 .row.widget,
 .row.widget .row {
+    width: 98.63%;
     margin: 0;
-}    width: 98.63%;
+}
 
 
 // Layout
